# alle

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  TESTING.md  docker-compose.yml  init.sql  justfile  sse_listener.py  test-setup.sh
.github/workflows/: ci.yml  release.yml
examples/: advanced.rs  cli_examples.sh  client_example.html  dynamic_subscriptions.rs  repl_demo.md  simple.rs
src/: auth.rs  bridge.rs  channel_name.rs  drop_stream.rs  lib.rs  main.rs  metrics.rs  postgres.rs  server_push.rs  subscriptions.rs  websocket.rs
tests/: sse_auth_tests.rs  sse_postgres_e2e_tests.rs
