[package]
name = "alle"
version = "0.1.0"
edition = "2021"

[lib]
name = "alle"
path = "src/lib.rs"

[[bin]]
name = "alle"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
tokio-tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
axum = "0.8.6"
pin-project = "1.1.10"
futures-channel = "0.3.31"
