[package]
name = "pit-alle"
version = "0.0.1"
edition = "2024"
authors = ["Filip Lindvall"]
readme = "README.md"
repository = "https://github.com/drpytho/alle"
license = "MIT"
description = "A message bridge between Postgres Listen notifty and SSE/WS"

exclude = ["sse_listener.py", "Dockerfile", "docker-compose.yml", "init.sql"]

[lib]
name = "alle"
path = "src/lib.rs"

[[bin]]
name = "alle"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8.6"
axum-extra = { version = "0.10", features = ["typed-header"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
futures-channel = "0.3.31"
pin-project = "1.1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-tungstenite = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
